update building controller
