# app/routes/building.routes.js
@@ -1,11 +1,13 @@
 import express from 'express'
 import * as buildingController from '../controller/building.controller'
+import * as verifyTokenmiddlewares from '../middlewares/verifyToken'
 const router = express.Router()
 
-router.post('/create', buildingController.createBuilding)
+router.post('/create', verifyTokenmiddlewares.verifyToken, verifyTokenmiddlewares.isAdmin, buildingController.createBuilding)
 
-router.get('/getall', buildingController.getBuilding)
+router.get('/getall', verifyTokenmiddlewares.verifyToken, verifyTokenmiddlewares.isAdmin, buildingController.getBuilding)
 
-router.put('/update', buildingController.updateBuilding)
-router.delete('/delete', buildingController.deleteBuilding)
+router.put('/update', verifyTokenmiddlewares.verifyToken, verifyTokenmiddlewares.isAdmin, buildingController.updateBuilding)
+router.delete('/delete', verifyTokenmiddlewares.verifyToken, verifyTokenmiddlewares.isAdmin, buildingController.deleteBuilding)
+
 export default router
