# app/routes/post.routes.js
@@ -4,6 +4,7 @@ import * as verifyTokenmiddlewares from '../middlewares/verifyToken'
 const router = express.Router()
 
 router.get('/limit', postController.getPostsLimit)
+router.get('/getall', postController.getAllPost)
 router.get('/:id', postController.getPostbyId)
 // router.get('/abc', (req, res) => {
 //     res.send('server on...')
