# swagger-output.json
@@ -5,7 +5,7 @@
         "title": "My API",
         "description": "Documentation automatically generated by the <b>swagger-autogen</b> module."
     },
-    "host": "secondhandvinhome.herokuapp.com",
+    "host": "localhost:5000",
     "basePath": "/",
     "tags": [
         {
@@ -49,7 +49,7 @@
                 "tags": [
                     "Post"
                 ],
-                "description": "",
+                "summary": "Get post limit 10 post",
                 "produces": [
                     "application/json"
                 ],
@@ -61,6 +61,22 @@
                         "type": "string"
                     }
                 ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            }
+        },
+        "/api/post/getall": {
+            "get": {
+                "tags": [
+                    "Post"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Get all post",
                 "responses": {
                     "200": {
                         "description": "OK"
@@ -288,21 +304,151 @@
                     }
                 }
             }
+        },
+        "/api/building/create": {
+            "post": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "summary": "Create a new building",
+                "requestBody": {
+                    "description": "Building object to be created",
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/Building"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "201": {
+                        "description": "Building created successfully",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/Building"
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Missing inputs"
+                    },
+                    "500": {
+                        "description": "Internal server error"
+                    }
+                }
+            }
+        },
+        "/api/building/getall": {
+            "get": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "summary": "Get all buildings",
+                "responses": {
+                    "200": {
+                        "description": "Buildings retrieved successfully",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "array",
+                                    "items": {
+                                        "$ref": "#/components/schemas/Building"
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error"
+                    }
+                }
+            }
+        },
+        "/api/building/update": {
+            "put": {
+                "summary": "Update a building",
+                "parameters": [
+                    {
+                        "in": "query",
+                        "name": "buildingId",
+                        "schema": {
+                            "type": "string"
+                        },
+                        "required": true,
+                        "description": "ID of building to update"
+                    }
+                ],
+                "requestBody": {
+                    "description": "Building object to be updated",
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/BuildingUpdate"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Building updated successfully",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/Building"
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Missing inputs",
+                        "content": {
+                            "application/json": {
+                                "example": {
+                                    "msg": "Missing inputs"
+                                }
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Server error",
+                        "content": {
+                            "application/json": {
+                                "example": {
+                                    "msg": "Fail at building controller: {error message}"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
         }
     },
     "securityDefinitions": {
-        "api_key": {
+        "Bearer": {
             "type": "apiKey",
-            "name": "api_key",
-            "in": "header"
-        },
-        "petstore_auth": {
-            "type": "oauth2",
-            "authorizationUrl": "https://petstore.swagger.io/oauth/authorize",
-            "flow": "implicit",
-            "scopes": {
-                "read:pets": "read your pets",
-                "write:pets": "modify pets in your account"
+            "name": "Authorization",
+            "in": "header",
+            "description": "JWT authorization, example: Beaer + token"
+        }
+    },
+    "components": {
+        "schemas": {
+            "Building": {
+                "type": "object",
+                "properties": {
+                    "buildingId": {
+                        "type": "string"
+                    }
+                }
             }
         }
     },
